--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 @article{memMedia,
   abbr={CHB},
   title={Image Memorability Predicts Social Media Virality and Externally-Associated Commenting},
-  author={<b>Peng, S.</b> and Bainbridge, W. A.},
+  author={Peng, Shikang and Bainbridge, Wilma A.},
   journal={Computers in Human Behavior},
   doi={https://doi.org/10.1016/j.chb.2025.108799},
   volume={174},
@@ -19,13 +19,14 @@
 @article{cogCoupling,
   abbr={CJEP},
   title={Text-Based and Memory-Based Metrics of Cognitive Coupling},
-  author={<b>Peng, S.</b> and Dixon, P.},
-  journal={Canadian Jouranal of Experimental Psychology},
+  author={Peng, Shikang and Dixon, Peter},
+  journal={Canadian Journal of Experimental Psychology},
   doi={https://doi.org/10.1037/cep0000349},
   eprint={https://doi.org/10.31234/osf.io/j69f8_v1},
   volume={78},
   issue={4},
   number={222-229},
+  selected={true},
   year={2024},
   preview={cogCoupling.png},
   publisher={American Psychological Association}
