typo and bib issue

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,7 @@
 
 @article{memMedia,
   abbr={CHB},
+  bibtex_show={true},
   title={Image Memorability Predicts Social Media Virality and Externally-Associated Commenting},
   author={Peng, Shikang and Bainbridge, Wilma A.},
   journal={Computers in Human Behavior},
@@ -12,20 +13,20 @@
   year={2026},
   selected={true},
   preview={memMedia.png},
-  google_scholar_id={KlAtU1dfN6UC},
   publisher={Elsevier}
 }
 
 @article{cogCoupling,
   abbr={CJEP},
+  bibtex_show={true},
   title={Text-Based and Memory-Based Metrics of Cognitive Coupling},
   author={Peng, Shikang and Dixon, Peter},
   journal={Canadian Journal of Experimental Psychology},
   doi={https://doi.org/10.1037/cep0000349},
-  eprint={https://doi.org/10.31234/osf.io/j69f8_v1},
+  url={https://doi.org/10.31234/osf.io/j69f8_v1},
   volume={78},
   issue={4},
-  number={222-229},
+  number={222--229},
   selected={true},
   year={2024},
   preview={cogCoupling.png},
